WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260620
[visionOS] Fullscreen windows do not cast shadows
https://bugs.webkit.org/show_bug.cgi?id=260620
Summary
[visionOS] Fullscreen windows do not cast shadows
Aditya Keerthi
Reported
2023-08-23 10:28:47 PDT
rdar://114049859
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-08-23 10:56:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16983
EWS
Comment 2
2023-08-23 14:34:59 PDT
Committed
267201@main
(b938895dd213): <
https://commits.webkit.org/267201@main
> Reviewed commits have been landed. Closing PR #16983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug