Cherry-pick b938895dd213. rdar://114049859

[visionOS] Fullscreen windows do not cast shadows
    https://bugs.webkit.org/show_bug.cgi?id=260620
    rdar://114049859

    Reviewed by Richard Robinson and Tim Horton.

    Adopt UIKit SPI to add a grounding shadow to the fullscreen window. The
    fullscreen window does not get a shadow by default since it's not platter-backed.

    * Source/WebKit/Platform/spi/ios/UIKitSPI.h:
    * Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
    (-[WKFullScreenWindowController enterFullScreen:]):

    Canonical link: https://commits.webkit.org/267201@main

Identifier: 265870.469@safari-7616-branch